# linux_llm_server

./: .gitignore  CLAUDE.md  ScriptMenu.sh  llm_start.sh  llm_status.sh  package-lock.json  package.json  playwright.config.js  rag-server.js  start-management-services.sh  stop-management-services.sh  test_all_llms.sh  web_connections.sh  web_start.sh
agents/ewr_agent_core/: pyproject.toml
agents/ewr_code_agent/: pyproject.toml
agents/ewr_code_agent/config/: agent_config.json
agents/ewr_code_intel_agent/: pyproject.toml
agents/ewr_document_agent/: README.md  pyproject.toml
agents/ewr_sp_analysis_agent/: README.md  pyproject.toml
agents/ewr_task_agent/: pyproject.toml
agents/ewr_test_agent/: pyproject.toml
python_services/: CHUNKING_IMPLEMENTATION_PLAN.md  CLAUDE.md  MAIN_PY_REFACTOR_PLAN.md  __init__.py  audio_service.py  category_service.py  config.py  data_models.py  database_name_parser.py  document_processor.py  embedding_service.py  extract_all_views.py  extract_ewr.py  extract_ewr_views_with_columns.py  extract_ewrcentral.py  extract_gin_entity.py  extract_marketing_entity.py  extract_provider.py  extract_warehouse_entity.py  generate_procedure_summaries.py  generate_summaries.py  generate_summaries_entity_views.py  generate_summaries_ewr.py  generate_summaries_ewr_views.py  generate_summaries_ewr_vm.py  generate_summaries_simple.py  log_service.py  main.py  models.py  process_manager.py  pyproject.toml  pyproject_updated.toml  roslyn_mongodb_service.py  run_summaries.py  schema_validator.py  start-prefect-dashboard.bat  test_llm.py  update_summary.py
python_services/api/: __init__.py  agent_learning_routes.py  agent_routes.py  audio_routes.py  code_flow_routes.py  document_agent_routes.py  document_pipeline_routes.py  llm_routes.py  sp_analysis_routes.py  sql_query_routes.py  sql_routes_new.py
python_services/app/: __init__.py  factory.py  lifespan.py  middleware.py
python_services/audio_pipeline/: __init__.py
python_services/audio_pipeline/prefect/: __init__.py  analysis_flow.py
python_services/audio_pipeline/services/: __init__.py  audio_analysis_service.py  content_analysis_service.py  database_service.py  diarization_service.py  emotion_service.py  metadata_service.py  summarization_service.py  transcription_service.py
python_services/audio_pipeline/utils/: __init__.py  audio_validator.py  format_converter.py
python_services/benchmarks/: fast_sql_benchmark_results.json
python_services/code_assistance_pipeline/: __init__.py  pipeline.py  routes.py
python_services/code_assistance_pipeline/prefect/: __init__.py  code_assist_flow.py
python_services/code_assistance_pipeline/services/: __init__.py  code_retriever.py  context_builder.py  response_generator.py
python_services/code_flow_pipeline/: __init__.py  pipeline.py  routes.py
python_services/code_flow_pipeline/prefect/: __init__.py  code_flow_flow.py
python_services/code_flow_pipeline/services/: __init__.py  call_chain_builder.py  multi_stage_retrieval.py  query_classifier.py
python_services/core/: __init__.py  log_utils.py  platform_utils.py  port_utils.py  process_manager.py
python_services/git_pipeline/: __init__.py  pipeline.py  routes.py
python_services/git_pipeline/prefect/: __init__.py  git_sync_flow.py
python_services/git_pipeline/services/: __init__.py  code_import_service.py  roslyn_service.py
python_services/git_service/: __init__.py  code_analyzer.py  git_service.py  models.py  repository_scanner.py
python_services/llm/: __init__.py  client.py  endpoints.py  integration.py  models.py  repository.py  service.py
python_services/mongodb/: __init__.py  audio.py  base.py  code_context.py  documents.py  feedback.py  helpers.py  sql.py  ticket_matching.py
python_services/orchestrator/: __init__.py  document_orchestrator.py  models.py
python_services/pipelines/: __init__.py  base.py
python_services/pipelines/document/: __init__.py  base.py  context.py  document_grading.py  document_pipeline.py  hybrid_retrieval.py  learning_feedback.py  orchestrator.py  query_understanding.py
python_services/prefect_pipelines/: SP_ANALYSIS_QUICKSTART.md  SP_ANALYSIS_README.md  __init__.py  agent_learning_flow.py  audio_flow.py  deployment.py  document_agent_flow.py  document_flow.py  document_qa_flow.py  git_flow.py  playwright_deployments.py  playwright_test_flow.py  pytest_pipeline_flow.py  scheduled_flows.py  sp_analysis_flow.py  sql_query_flow.py  ticket_matching_flow.py
python_services/prefect_pipelines/examples/: sp_analysis_example.py
python_services/prefect_pipelines/test_flows/: README.md  __init__.py  audio_pipeline_test_flow.py  base_test_flow.py  code_assistance_pipeline_test_flow.py  code_flow_pipeline_test_flow.py  document_pipeline_test_flow.py  git_pipeline_test_flow.py  master_test_orchestrator.py  query_pipeline_test_flow.py  sql_pipeline_test_flow.py  test_deployments.py  (+1 more)
python_services/query_pipeline/: __init__.py  pipeline.py  routes.py
python_services/routes/: INTEGRATION_GUIDE.py  __init__.py  admin_routes.py  audio_metrics_routes.py  audio_routes.py  auth_routes.py  bulk_audio_routes.py  category_routes.py  code_context_routes.py  document_routes.py  feedback_routes.py  git_operations_routes.py  git_routes.py  health_routes.py  llm_monitoring_routes.py  pipeline_routes.py  roslyn_routes.py  settings_routes.py  sql_auth_routes.py  sql_extraction_routes.py  sql_knowledge_routes.py  sql_rag_routes.py  sql_summarization_routes.py  sql_validation_routes.py  status_routes.py  tag_routes.py
python_services/scripts/: migrate_sql_rules_to_mongodb.py  purge_test_data.py  test_ewr_query.py  test_sql_rules_service.py
python_services/services/: __init__.py  agent_learning_service.py  document_embedder.py  document_reranker.py  environment_agent.py  ewrcentral_agent.py  health_monitor.py  hybrid_retriever.py  llm_service.py  question_rewriter.py  relationship_graph.py  semantic_cache.py  sql_generator.py  sql_rules_service.py  sqlite_service.py  test_agent.py
python_services/sql_pipeline/: __init__.py  query_pipeline.py  training_pipeline.py
(+474 files in other folders)
