[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ewr-code-agent"
version = "1.0.0"
description = "EWR Code Agent - Code analysis, generation, review, and project scanning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "EWR Development Team"}
]
keywords = ["agents", "code-analysis", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ewr-agent-core>=1.0.0",
    "aiofiles>=23.0.0",
    "chardet>=5.0.0",
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
tree-sitter = [
    "tree-sitter>=0.20.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ewr-code-agent = "ewr_code_agent.cli:main"

[project.urls]
"Homepage" = "https://github.com/ewr/ewr-agents"

[tool.setuptools.packages.find]
where = ["src"]
