[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ewr-code-intel-agent"
version = "1.0.0"
description = "EWR Code Intelligence Agent - Deep code analysis, call graphs, and self-validating knowledge"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "EWR Development Team"}
]
keywords = ["agents", "code-analysis", "static-analysis", "ai", "llm", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ewr-agent-core>=1.0.0",
    "ewr-code-agent>=1.0.0",
    "aiofiles>=23.0.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
mongodb = [
    "motor>=3.3.0",
]
roslyn = [
    # Roslyn integration for C# analysis
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ewr-code-intel = "ewr_code_intel_agent.cli:main"

[project.urls]
"Homepage" = "https://github.com/ewr/ewr-agents"

[tool.setuptools.packages.find]
where = ["src"]
