[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ewr-document-agent"
version = "1.0.0"
description = "EWR Document Agent - Document processing, chunking, embedding, and retrieval"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "EWR Development Team"}
]
keywords = ["agents", "documents", "etl", "embeddings", "rag", "chunking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ewr-agent-core>=1.0.0",
    "aiofiles>=23.0.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "motor>=3.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
]
audio = [
    "openai-whisper>=20230918",
    "pydub>=0.25.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
all = [
    "ewr-document-agent[api,ocr,dev]",
]

[project.scripts]
ewr-document = "ewr_document_agent.cli:main"
ewr-document-api = "ewr_document_agent.api:run_server"

[project.urls]
"Homepage" = "https://github.com/ewr/ewr-agents"

[tool.setuptools.packages.find]
where = ["src"]
