[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ewr-sp-analysis-agent"
version = "1.0.0"
description = "EWR Stored Procedure Analysis Agent - Generates NL->SQL training data from stored procedures"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "EWR Development Team"}
]
keywords = ["agents", "sql", "stored-procedures", "training-data", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ewr-agent-core>=1.0.0",
    "motor>=3.0.0",
    "aiohttp>=3.8.0",
    "prefect>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ewr-sp-analysis = "ewr_sp_analysis_agent.cli:main"

[project.urls]
"Homepage" = "https://github.com/ewr/ewr-agents"

[tool.setuptools.packages.find]
where = ["src"]
