[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ewr-task-agent"
version = "1.0.0"
description = "EWR Task Agent - Shell execution, Git operations, and workflow automation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "EWR Development Team"}
]
keywords = ["agents", "shell", "git", "automation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ewr-agent-core>=1.0.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ewr-task-agent = "ewr_task_agent.cli:main"

[project.urls]
"Homepage" = "https://github.com/ewr/ewr-agents"

[tool.setuptools.packages.find]
where = ["src"]
