[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ewr-test-agent"
version = "1.0.0"
description = "EWR Test Agent - Playwright test generation, execution, and self-correction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "EWR Development Team"}
]
dependencies = [
    "ewr-agent-core",
    "playwright>=1.40.0",
    "pytest>=7.0.0",
    "pytest-playwright>=0.4.0",
    "allure-pytest>=2.13.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ewr_test_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
